[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Question.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -22.0
margin_right = -50.0
margin_bottom = 18.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -40.0
margin_right = 31.5
margin_bottom = 40.0

[node name="Question" type="Label" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 14.0
text = "Question:"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 62.0
columns = 2

[node name="1" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 30.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"

[node name="2" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 34.0
margin_right = 63.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"

[node name="3" type="Button" parent="VBoxContainer/GridContainer"]
margin_top = 24.0
margin_right = 30.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "1"

[node name="4" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 34.0
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "1"

[node name="Explanation" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 63.0
margin_bottom = 80.0
text = "dsfasdfa"
align = 1

[connection signal="pressed" from="VBoxContainer/GridContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/4" to="." method="_on_4_pressed"]
